--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss-import": "^14.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-uuid": "^1.0.2",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
