--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
+    "dotenv": "^8.2.0",
     "firebase": "^8.2.8",
     "next": "^10.0.6",
     "postcss": "^8.2.6",
