--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
+    "css-loader": "^5.1.0",
     "dotenv": "^8.2.0",
+    "file-loader": "^6.2.0",
     "firebase": "^8.2.8",
     "next": "^10.0.6",
     "postcss": "^8.2.6",
@@ -17,7 +19,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-uuid": "^1.0.2",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "stylelint-config-recommended": "^3.0.0"
